REGRESSION (r89900): Assertion failure on null view() when destroying the document https://bugs.webkit.org/show_bug.cgi?id=91547

Patch by Elliott Sprehn <esprehn@gmail.com> on 2012-07-18
Reviewed by Abhishek Arya.

Source/WebCore:

Check for document destruction during insertion to avoid crash on null RenderView when trying
to count the number of RenderQuote and RenderCounter objects.

Test: fast/css-generated-content/bug91547.html

* rendering/RenderObjectChildList.cpp:
(WebCore::RenderObjectChildList::appendChildNode):
(WebCore::RenderObjectChildList::insertChildNode):

LayoutTests:

Test for crash caused by null RenderView in RenderQuote and RenderCounter.

* fast/css-generated-content/bug91547-expected.txt: Added.
* fast/css-generated-content/bug91547.html: Added.

Canonical link: https://commits.webkit.org/109518@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123060 268f45cc-cd09-0410-ab3c-d52691b4dbfc